Bug 1051822 - Create global helper thread state on JS_Init() r=terrence

--HG--
extra : rebase_source : 2b9cd42a1011396d6c5043d86d3d5f2ad618c884